# Argowake_Marketing

./: .env.example  .gitignore  README.md  agent.py  budget.py  email_agent.py  email_tools.py  hubspot_tools.py  logging_setup.py  main.py  marketing_team.py  oauth_tools.py  prospects_enriched.json  prospects_enriched_batch_1.json  prospects_enriched_batch_2.json  prospects_enriched_batch_3.json  prospects_enriched_batch_4.json  prospects_enriched_batch_5.json  prospects_hubspot.json  pyproject.toml  web_email.py  web_gliner.py  web_render.py  web_tools.py
docs/: prompt.md
