[project]
name = "argowake-marketing-agents"
version = "0.1.0"
description = "Multi-agent marketing starter for Argowake."
requires-python = ">=3.11"
dependencies = [
  "openai-agents",
  "msal",
  "structlog",
  "beautifulsoup4",
  "extruct",
  "phonenumbers",
  "lxml",
  "usaddress",
  "gliner2",
]

[project.scripts]
argowake-marketing = "main:main"

[tool.uv]
dev-dependencies = []
